--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dietary Quiz - Home</title>
+    <title>Dietary Quiz-about</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-
-<!--navigation-->
+<!-- Navigation -->
 <nav>
     <ul>
         <li><a href="quiz-home.html">HOME</a></li>
@@ -18,28 +17,18 @@
     </ul>
 </nav>
 
-<!--side-bar-->
+<!-- Side-bar -->
 <side-bar>
     <ul>
         <li><a href="#">Quick Links 1</a></li>
         <li><a href="#">Quick Links 2</a></li>
         <li><a href="#">Quick Links 3</a></li>
     </ul>
-
-    <div class="learn-more-section">
-        <h3>Learn more about us</h3>
-        <p><a href="about.html">About</a></p>
-        <p><a href="credits.html">Credits</a></p>
-    </div>
 </side-bar>
 
-<!--Main Body-->
-<div class="main-content">
-    <h1 class="main-title">Dietary Quiz</h1>
-    <h2>Welcome to the Dietary Quiz</h2>
-    <p>Explore our selection of dietary quizzes and test your knowledge.</p>
-    <a href="quiz.html" class="button">Start the Quiz</a>
+<div class="about-content">
+    <h2>About our QUIZ</h2>
+    <p>in this time we feel that to few people know about dietary and its positives and negitives so we to both gather data and teach others about the difrent food they eat on a day to day baces</p>
 </div>
-
 </body>
 </html>
